gccida/c3/combine_instructions
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:975:4: error: expected ';' after expression
rtx v8; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:975:5: error: use of undeclared identifier 'v8'
rtx v8; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:980:4: error: expected ';' after expression
rtx v13; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:980:5: error: use of undeclared identifier 'v13'
rtx v13; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:984:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:984:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:988:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:988:5: error: use of undeclared identifier 'v21'
rtx v21; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:991:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:991:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1004:25: error: expected expression
reg_last_death = ( rtx *)xmalloc( 8LL * nregs); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1005:23: error: expected expression
reg_last_set = ( rtx *)xmalloc( 8LL * nregs); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1006:29: error: expected expression
reg_last_set_value = ( rtx *)xmalloc( 8LL * nregs); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1010:37: error: expected expression
reg_last_set_mode = ( machine_mode *)xmalloc( 4LL * nregs); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1010:23: error: use of undeclared identifier 'machine_mode'
reg_last_set_mode = ( machine_mode *)xmalloc( 4LL * nregs); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1050:1: error: use of undeclared identifier 'v8'
v8 = f; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1053:26: error: use of undeclared identifier 'v8'
*( ( _DWORD *)uid_cuid + v8->fld[0].rtint) = v7; 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1055:14: error: use of undeclared identifier 'v8'
subst_insn = v8; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/combine.c:1056:17: error: use of undeclared identifier 'v8'
v9 = *( _WORD *)v8; 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/combine_instructions/src/obj/combine.o] Error 1
